[package]
name = "hope"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.22"
#sdl2 = { version = "0.35.2" }
varying = { path = "varying" }
shader = { path = "shader" }
threadPool = { path = "threadPool"}
unchecked = { git = "https://github.com/ymyh/unchecked" }
#libc = "*"
image = "0.24.3"
#rand = "0.8.5"
#num_cpus = "1.15.0"

[workspace]
members = ["./varying", "./shader", "./threadPool"]